--- a/configs/paths.yml
+++ b/configs/paths.yml
@@ -1,3 +1,3 @@
-library: @PEAR-DIR@Phrozn/
-configs: @DATA-DIR@configs/
-skeleton: @DATA-DIR@skeleton/
+library: "@PEAR-DIR@Phrozn/"
+configs: "@DATA-DIR@configs/"
+skeleton: "@DATA-DIR@skeleton/"
