--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pawka/phrekyll",
+    "name": "lordelph/phrekyll",
     "description": "Static Site Generator for PHP",
     "require": {
         "twig/twig": "1.12.*",
