--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine on
-RewriteCond %{HTTP_HOST} ^phrozn\.info$
-RewriteRule (.*) http://www.phrozn.info/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} ^phrekyll\.info$
+RewriteRule (.*) http://www.phrekyll.info/$1 [R=301,L]
 RewriteRule ^$ en [L]
 
 <IfModule mod_expires.c>
