--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: php
+
 php:
   - 5.3
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+
 before_script:
-  - wget http://getcomposer.org/composer.phar
-  - php composer.phar install
-script: "phpunit --configuration tests/phpunit.xml"
+  - composer install
+
+script:
+  - ./vendor/bin/phpcs --extensions=php --ignore=Vendor/Extra/scss.inc.php Phrekyll
+  - phpunit --configuration tests/phpunit.xml
