--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Static Site Generator for PHP",
     "require": {
         "twig/twig": "1.12.*",
-        "symfony/yaml": "2.0.*",
+        "symfony/yaml": "2.*",
         "pear/Console_Color2": "*",
         "pear/Console_Table": "*",
         "pear/archive_tar": "*",
@@ -11,6 +11,10 @@
         "leafo/lessphp": "0.4.*",
         "michelf/php-markdown": "1.3.*",
         "netcarver/textile": "3.5.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "5.*",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-0": {
