added psr2 to scrutinizer config

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,6 +5,11 @@ filter:
 checks:
     php: true
 
+tools:
+    php_code_sniffer:
+        config:
+            standard: "PSR2"
+
 build:
     environment:
         php: '5.6.16'
